<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@drawable/custom_button_grey"
            android:text="@string/c"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/BUTTON"
            android:layout_margin="@dimen/margin_button"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@drawable/custom_button_grey"
            android:src="@drawable/ic_plusandminus"
            android:padding="@dimen/paddingIconButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@drawable/custom_button_grey"
            android:text="@string/percent"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@drawable/custom_button_blue"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/_number7"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/_number8"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/_number9"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@drawable/custom_button_blue"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/_number4"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/_number5"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/_number6"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@drawable/custom_button_blue"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/_number1"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/_number2"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/_number3"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@drawable/custom_button_blue"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:text="@string/dot"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:text="@string/_number0"
            android:textSize="@dimen/text_size_button" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_margin="@dimen/margin_button"
            style="@style/BUTTON"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_delete"
            android:padding="@dimen/paddingIconButton"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/margin_button"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@drawable/custom_button_blue"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button" />
    </GridLayout>

</LinearLayout>